fix z-index links bug

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,6 @@
 #download-page {
     #links {
+        z-index: 2;
         position: absolute;
         right: 10px;
         top: 10px;
